# touch-scroll-physics-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.cmd  default.nix  result  shell.nix
.github/workflows/: cmake-multi-platform.yml  cmake-with-java.yml
demo/: CMakeLists.txt  demo.c
demo-c/: CMakeLists.txt  demo.c
demo-cpp/: CMakeLists.txt  demo.cpp  touch_scroll_physics_wrapper.cpp  touch_scroll_physics_wrapper.hpp
demo/java/: CMakeLists.txt  README.md
demo/java/com/doomhowl/touchscrollphysics/: TouchScrollerDemo.java
